# NougatWrapper

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: publish-to-release.yml  test-build.yml
src/: index.css  main.tsx  markdown.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  screencapture.rs
src/common/: app.ts  assertion.ts  http.ts  time.ts  tokenizer.ts
src/components/: app.tsx  error.tsx  job-list.tsx  job.tsx  loading.tsx  navigator.tsx  screencapture.tsx  settings.tsx  trash.tsx
src/database/: job.ts  library.ts  settings.ts  tables.ts
src/redux/: jobs-reducer.ts  navigator-reducer.ts  store.ts
src/services/: nougat-apis.ts  result.ts
